--- a/documentation/hiatus_conda_requirement.yaml
+++ b/documentation/hiatus_conda_requirement.yaml
@@ -49,15 +49,18 @@ dependencies:
       - click==8.1.7
       - cloudpathlib==0.20.0
       - coloredlogs==15.0.1
-      - compel==2.0.3
+      #- compel==2.0.3
+      - compel
       - confection==0.1.5
       - contourpy==1.3.1
       - cryptography==44.0.0
       - ctransformers==0.2.27
       - cycler==0.12.1
       - cymem==2.0.10
-      - datadreamer==0.2.0
-      - datadreamer-dev==0.38.0
+      #- datadreamer==0.2.0
+      #- datadreamer-dev==0.38.0
+      - datadreamer
+      - datadreamer-dev
       - datamodel-code-generator==0.26.1
       - datasets==2.21.0
       - decorator==5.1.1
@@ -69,16 +72,19 @@ dependencies:
       - docstring-parser==0.16
       - einops==0.8.0
       - email-validator==2.2.0
-      - evaluate==0.4.3
+      #- evaluate==0.4.3
+      - evaluate
       - faiss-cpu==1.9.0.post1
       - faker==33.1.0
       - filelock==3.16.1
       - flatbuffers==24.3.25
       - fonttools==4.55.2
       - frozenlist==1.5.0
-      - fsspec==2024.3.1
+      #- fsspec==2024.3.1
+      - fsspec
       - gast==0.6.0
-      - gcsfs==2024.10.0
+      #- gcsfs==2024.10.0
+      - gcsfs
       - gensim==4.3.3
       - genson==1.3.0
       - google-api-core==2.24.0
